--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.65.1",
     "@trpc/client": "^11.0.0-rc.730",
@@ -30,10 +31,12 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.1",
     "superjson": "^2.2.2",
     "svix": "^1.45.1",
     "tailwind-merge": "^3.0.1",
