--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.3",
+    "@hookform/resolvers": "^4.1.1",
     "@mux/mux-node": "^9.0.1",
+    "@mux/mux-player-react": "^3.2.4",
     "@mux/mux-uploader-react": "^1.1.1",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
@@ -31,6 +36,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.0",
+    "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
@@ -38,6 +44,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
+    "react-hook-form": "^7.54.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "superjson": "^2.2.2",
@@ -45,7 +52,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
