--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/client": "^11.0.0-rc.730",
     "@trpc/react-query": "^11.0.0-rc.730",
     "@trpc/server": "^11.0.0-rc.730",
+    "@uploadthing/react": "^7.3.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
     "class-variance-authority": "^0.7.1",
@@ -51,6 +52,7 @@
     "svix": "^1.45.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.5.2",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
